...
      component={ExtendedChallengeProgressScreen}
      options={{ title: 'Progress' }}
    />
    <Stack.Screen
      name="HabitDetail"
      component={MyPracticeDetailScreen}
      options={{ title: 'Practice Detail' }}
    />
    <Stack.Screen
      name="HabitActionPlan"
      component={HabitActionPlanScreen}
      options={{ title: 'Action Plan' }}
    />
...
